discussion/kv_engine/133514/133514_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Move CB3ExecutorThread to own files

Move the CB3ExecutorThread class from executorthread.{cc,h} to it's
own cb3_executorthread.{cc,h} files.

Change-Id: I7871ae8cafc1861a650a86a85315c718c39f11b6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-30 12:29:42.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-30 12:35:08.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25427/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25427/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3599/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorthread.h:55:9: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
        AtomicProcessTime() {
        ^                   ~
                            = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3599/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3599/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29375/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\cb3_executorpool.h(257): error C3646: "_adjustWorkers": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29375/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5039/ : FAILURE

Compile error at [2020-07-30T12:33:10.163Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5039/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4939/ : FAILURE

Compile error at [2020-07-30T12:32:14.433Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4939/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12755/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3968/ : FAILURE

Compile error at [2020-07-30T12:30:44.713Z] ../kv_engine/engines/ep/benchmarks/executor_bench.cc:86:9:
error: no member named "RelaxedAtomic" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3968/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4855/ : FAILURE

Compile error at [2020-07-30T12:32:50.944Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4855/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2114/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
